- FIX: login page horizontal scrollable removed
Former-commit-id: 78d08782e124e38a17564af2f1a0dd74356d8f39

--- a/tasmoadmin/resources/css/all.css
+++ b/tasmoadmin/resources/css/all.css
@@ -6,10 +6,6 @@
   z-index: 1035;
   background-color: black;
   padding: 3px; }
-.debug .col, .debug .card {
-  border: 1px solid red !important; }
-.debug .row, .debug .form-row {
-  border: 1px solid blue !important; }
 
 @media (max-width: 340px) and (min-width: 0px) {
   .col-xs-6 {
